--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Alata&family=Josefin+Sans:wght@300&display=swap');
 
-:root{
+:root {
     --White: hsl(0, 0%, 100%);
     --Black: hsl(0, 0%, 0%);
     --DarkGray: hsl(0, 0%, 55%);
@@ -18,12 +18,10 @@
 
     /* height */
     --nav-height: 10rem;
-    
-    
-    
 }
+
 @media (min-width: 768px) {
-    :root{
+    :root {
         --menu-font: 'Alata', sans-serif;
         --menu-size: 1.5rem;
         --hero: 7.2rem;
@@ -33,6 +31,7 @@
         --nav-height: 16rem;
     }
 }
+
 /* ?COPY */
 .attribution {
     font-size: 11px;
@@ -49,7 +48,9 @@ html {
     box-sizing: border-box;
 }
 
-*,*::after,*::before{
+*,
+*::after,
+*::before {
     box-sizing: inherit;
 }
 
@@ -57,51 +58,69 @@ body {
     font-size: 1.5rem;
     font-family: var(--body-text);
 }
-ul{
+
+ul {
     list-style: none;
     margin: 0;
     padding: 0;
 }
-a{
+
+a {
+    position: relative;
     text-decoration: none;
 }
-img{
+img {
     max-width: 100%;
 }
-p{
+
+p {
     margin: 0;
     color: var(--DarkGray);
 }
-h1, h2, h3{
+
+h1,
+h2,
+h3 {
     margin: 0;
     font-family: var(--titles);
     font-weight: 300;
     text-transform: uppercase;
 }
-picture{
+
+picture {
     line-height: 0;
     padding: 0;
     margin: 0;
 }
-.container{
+
+.container {
     max-width: 116.4rem;
+    width: 100%;
     padding: 0 2.5rem;
     margin: 0 auto;
 }
+
 /* NAV */
-.logo{
-    width: 14.5rem;
-}
-.nav{
-    height: var(--nav-height);
+header {
     width: 100%;
     position: absolute;
+
+}
+
+.logo {
+    width: 14.5rem;
+}
+
+.nav {
+    position: relative;
+    height: var(--nav-height);
     display: flex;
     justify-content: space-between;
     align-items: center;
     z-index: 100;
 }
-.menu__list{
+
+.menu__list {
     position: fixed;
     top: 0;
     left: -100%;
@@ -116,37 +135,96 @@ picture{
     gap: 2.5rem;
     transition: .3s left ease-in-out;
 }
-.menu__list.active{
+
+.menu__list.active {
     left: 0;
 }
-.menu__toggle{
+
+.menu__toggle {
     background-image: url(../images/icon-hamburger.svg);
     background-repeat: no-repeat;
     background-size: contain;
     background-position: center;
     width: 2.5rem;
     height: 2rem;
+    transition: all .3s ease-in-out;
 }
-.menu__toggle.active{
+
+.menu__toggle.active {
     background-image: url(../images/icon-close.svg);
 }
+
 .list__link {
     color: var(--White);
     font-family: var(--menu-font);
     font-size: var(--menu-size);
     text-transform: uppercase;
 }
+
+@media (min-width: 768px) {
+    .logo {
+        width: 19.5rem;
+    }
+
+    .nav {
+        position: relative;
+        height: var(--nav-height);
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        z-index: 100;
+    }
+
+    .menu__list {
+        position: relative;
+        display: flex;
+        align-items: center;
+        flex-direction: row;
+        top: 0;
+        left: 0;
+        height: auto;
+        width: auto;
+        background-color: unset;
+        z-index: 0;
+        padding-left: 0rem;
+        gap: 2.5rem;
+        transition: .3s left ease-in-out;
+    }
+
+    .menu__list.active {
+        left: 0;
+    }
+
+    .menu__toggle {
+        display: none;
+    }
+
+    .list__link {
+        color: var(--White);
+        text-transform: unset;
+    }
+}
+
 /* HERO */
-.hero{
-    position: relative;
+.hero {
     display: flex;
     justify-content: center;
     align-items: center;
     width: 100%;
+    overflow: hidden;
     min-height: 65rem;
+    background-image: url(../images/mobile/image-hero.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
 }
-.hero__text{
-    position: absolute;    
+
+.hero .container {
+    display: flex;
+    justify-content: center;
+}
+
+.hero__text {
     color: var(--White);
     text-transform: uppercase;
     font-family: var(--titles);
@@ -157,53 +235,130 @@ picture{
     padding: 2.5rem;
 
 }
-/* ABOUT */
-.about{
-    padding: 9.5rem 2.5rem 4.5rem ;
-    text-align: center;
+
+@media (min-width: 768px) {
+    .hero {
+        background-image: url(../images/desktop/image-hero.jpg);
+        justify-content: left;
+    }
+
+    .hero__text {
+        max-width: 65rem;
+        padding: 4rem;
+    }
+
+    .hero .container {
+        display: flex;
+        justify-content: flex-start;
+    }
 }
-.about__content{
+
+/* ABOUT */
+.about {
+    padding: 9.5rem 2.5rem 4.5rem;
+    text-align: center;
+
+}
+
+.about__content {
     max-width: 28rem;
     margin: 0 auto;
 }
-.title{
+
+.title {
     text-align: center;
     font-size: var(--section);
     color: var(--Black);
     margin: 4.5rem 0 2.5rem;
 }
-.about__text{
+
+.about__text {
     color: var(--DarkGray);
     line-height: 2;
 }
-/* CAREERS */
-.careers{
-    padding: 0 2.5rem 6.5rem;
+
+@media (min-width: 768px) {
+    .about__content {
+        max-width: 55rem;
+    }
 }
-.careers .title{
+
+@media (min-width: 992px) {
+    .about {
+        padding: 16rem 2.5rem 9.5rem;
+        text-align: left;
+        height: 75.5rem;
+    }
+
+    .about__pos {
+        position: relative;
+        width: 100%;
+        height: 100%;
+    }
+
+    .about img {
+        position: absolute;
+        top: 0;
+        left: 0;
+    }
+
+    .about .title {
+        text-align: left;
+        font-size: var(--section);
+        color: var(--Black);
+        margin: 0 0 4rem 0;
+    }
+
+    .about__content {
+        position: absolute;
+        bottom: 0;
+        right: 0;
+        background-color: var(--White);
+        padding: 9rem 0 0 9rem;
+    }
+}
+
+/* CAREERS */
+.careers {
+    padding: 0 2.5rem 6.5rem;
+    display: grid;
+}
+
+.careers .title {
     margin-bottom: 5rem;
 }
-.cards{
+
+.cards {
     line-height: 0;
     display: grid;
+    justify-items: center;
+    align-items: center;
     gap: 2.5rem;
 }
-.card{
+
+.card {
     position: relative;
-    color: rgba(0, 0, 0, .2);
 }
-.card::after{
+
+.card:before {
     position: absolute;
     content: '';
     top: 0;
     right: 0;
     height: 100%;
     width: 100%;
-    background: -webkit-linear-gradient(to right, rgba(0,0,0, .6), transparent);
+    background: -webkit-linear-gradient(to right, rgba(0, 0, 0, .6), transparent);
     background: linear-gradient(to right, rgba(0, 0, 0, .6), transparent);
     z-index: 20;
+    transition: all .3s ease;
 }
-.card__text{
+
+.card:hover::before {
+    background: rgba(255, 255, 255, .6);
+}
+
+
+.card__text {
     position: absolute;
     max-width: 12.5rem;
     bottom: 2.5rem;
@@ -214,48 +369,149 @@ picture{
     line-height: 1;
     color: var(--White);
     z-index: 21;
+    transition: all .3s ease;
 }
-.btn{
+
+.card:hover .card__text {
+    color: var(--Black);
+}
+
+.btn {
     display: block;
     outline: none;
-    border: none;
+    border: 1px solid #000;
     font-family: var(--body-text);
     text-transform: uppercase;
     letter-spacing: 0.45rem;
     padding: 1rem 4rem;
     margin: 3rem auto;
-    color: var(--White);
-    background-color: var(--Black);
-    cursor: pointer;
-}
-.btn__outline{
-    border: 1px solid #000;
-    background-color: transparent;
     color: var(--Black);
+    background-color: transparent;
+    cursor: pointer;
+    transition: .3s all ease;
 }
-/* FOOTER */
-.footer{
+
+.btn:hover {
     background-color: var(--Black);
+    color: var(--White);
+}
+
+@media (min-width: 768px) {
+    .careers {
+        grid-template-columns: repeat(2, 1fr);
+        padding: 0 2.5rem 18rem;
+    }
+
+    .careers .title {
+        margin: 9rem 0;
+        justify-self: start;
+        align-self: center;
+    }
+
+    .cards {
+        grid-column: span 2;
+        grid-template-columns: repeat(auto-fit, minmax(256px, 1fr));
+        gap: 3rem;
+    }
+
+    .card::before {
+        background: -webkit-linear-gradient(to top, rgba(0, 0, 0, .6), transparent);
+        background: linear-gradient(to top, rgba(0, 0, 0, .6), transparent);
+        z-index: 20;
+    }
+
+    .card__text {
+        max-width: 20rem;
+        bottom: 4rem;
+        left: 4rem;
+    }
+
+    .btn {
+        grid-area: 2 / 3 / -1 / -2;
+        margin: unset;
+        align-self: center;
+        justify-self: end;
+    }
+}
+
+/* FOOTER */
+.footer {
+    background-color: var(--Black);
+}
+
+.footer__content {
     padding: 5.5rem 2.5rem;
     display: flex;
     flex-direction: column;
     align-items: center;
+
 }
-.footer .logo{
+
+.footer .logo {
     margin-bottom: 3.2rem;
 }
-.nav__footer{
+
+.nav__footer {
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 2.5rem;
     margin-bottom: 5rem;
 }
-.nav__footer a{
+
+.social a,
+.nav__footer a {
     color: var(--White);
+    transition: .3s all ease;
 }
-.social{
+
+.social {
     display: flex;
     gap: 1.5rem;
     margin-bottom: 2.5rem;
+}
+
+@media (min-width: 768px) {
+    .footer__content {
+        display: grid;
+        gap: 3rem;
+        grid-template-columns: repeat(2, 1fr);
+        padding: 4.5rem;
+    }
+
+    .nav__footer {
+        grid-area: 2 / 1 / 3 / 2;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        gap: 2.5rem;
+        margin-bottom: 5rem;
+    }
+
+    .social,
+    .copy {
+        justify-self: end;
+    }
+
+    .nav__footer,
+    .social,
+    .copy,
+    .footer .logo {
+        margin: 0;
+    }
+
+    /* ?hover links  */
+    .nav__footer a:hover::before,
+    .social a:hover::before,
+    .list__link:hover::before {
+        content: '';
+        position: absolute;
+        width: 2.4rem;
+        height: .2rem;
+        background: #fff;
+        bottom: -.8rem;
+        left: 50%;
+        transform: translateX(-50%);
+
+    }
 }
