--- a/styles/styles.css
+++ b/styles/styles.css
@@ -207,6 +207,7 @@ header {
 
 /* HERO */
 .hero {
+    position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -218,14 +219,24 @@ header {
     background-size: cover;
     background-position: center center;
 }
-
+.hero::before{
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, .5);
+    z-index: 1;
+}
 .hero .container {
     display: flex;
     justify-content: center;
 }
 
 .hero__text {
+    position: relative;
+    z-index: 2;
     color: var(--White);
+    line-height: 1;
     text-transform: uppercase;
     font-family: var(--titles);
     font-weight: 300;
